crates/swc_css_parser/tests/recovery/function/calc/space/output.stderr
error: Expected ")"
 --> $DIR/tests/errors/rome/invalid/calc-space/input.css:2:17
  |
2 |     width: calc(2px+1px);
  |                    ^^^^

